logs/dag_id=clean_trash_bucket/run_id=manual__2022-11-30T14:00:21.617373+00:00/task_id=clean_bucket/attempt=9.log
[2022-11-30T15:01:14.807+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: clean_trash_bucket.clean_bucket manual__2022-11-30T14:00:21.617373+00:00 [None]>
[2022-11-30T15:01:14.814+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: clean_trash_bucket.clean_bucket manual__2022-11-30T14:00:21.617373+00:00 [None]>
[2022-11-30T15:01:14.815+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-30T15:01:14.816+0000] {taskinstance.py:1363} INFO - Starting attempt 9 of 9
[2022-11-30T15:01:14.817+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-30T15:01:14.826+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): clean_bucket> on 2022-11-30 14:00:21.617373+00:00
[2022-11-30T15:01:14.832+0000] {standard_task_runner.py:55} INFO - Started process 3693 to run task
[2022-11-30T15:01:14.837+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'clean_trash_bucket', 'clean_bucket', 'manual__2022-11-30T14:00:21.617373+00:00', '--job-id', '22', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/CleanTrashBucket.py', '--cfg-path', '/tmp/tmp2zdk2ij3']
[2022-11-30T15:01:14.840+0000] {standard_task_runner.py:83} INFO - Job 22: Subtask clean_bucket
[2022-11-30T15:01:14.904+0000] {task_command.py:376} INFO - Running <TaskInstance: clean_trash_bucket.clean_bucket manual__2022-11-30T14:00:21.617373+00:00 [running]> on host cad2b5b69ef8
[2022-11-30T15:01:14.964+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=***.golovanov@gmail.com
AIRFLOW_CTX_DAG_OWNER=Eugeny Golovanov
AIRFLOW_CTX_DAG_ID=clean_trash_bucket
AIRFLOW_CTX_TASK_ID=clean_bucket
AIRFLOW_CTX_EXECUTION_DATE=2022-11-30T14:00:21.617373+00:00
AIRFLOW_CTX_TRY_NUMBER=9
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-30T14:00:21.617373+00:00
[2022-11-30T15:01:14.976+0000] {logging_mixin.py:120} INFO - PostgreSQL connection is closed
[2022-11-30T15:01:14.977+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/CleanTrashBucket.py", line 39, in clean_bucket
    cursor.execute(query)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 3:                    values {{ deleted_files }}
                                  ^

[2022-11-30T15:01:14.988+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=clean_trash_bucket, task_id=clean_bucket, execution_date=20221130T140021, start_date=20221130T150114, end_date=20221130T150114
[2022-11-30T15:01:14.997+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.7/site-packages/***/utils/email.py:120: RemovedInAirflow3Warning: Fetching SMTP credentials from configuration variables will be deprecated in a future release. Please set credentials using a connection instead.
  send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)

[2022-11-30T15:01:14.998+0000] {configuration.py:569} WARNING - section/key [smtp/smtp_user] not found in config
[2022-11-30T15:01:14.999+0000] {email.py:229} INFO - Email alerting: attempt 1
[2022-11-30T15:01:15.008+0000] {configuration.py:569} WARNING - section/key [smtp/smtp_user] not found in config
[2022-11-30T15:01:15.009+0000] {email.py:229} INFO - Email alerting: attempt 1
[2022-11-30T15:01:15.010+0000] {taskinstance.py:1914} ERROR - Failed to send email to: ['***.golovanov@gmail.com']
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1457, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1603, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1664, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/CleanTrashBucket.py", line 39, in clean_bucket
    cursor.execute(query)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 3:                    values {{ deleted_files }}
                                  ^


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 2315, in email_alert
    send_email(task.email, subject, html_content)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 72, in send_email
    **kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 120, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 231, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 265, in _get_smtp_connection
    else smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 251, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/local/lib/python3.7/smtplib.py", line 336, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 307, in _get_socket
    self.source_address)
  File "/usr/local/lib/python3.7/socket.py", line 728, in create_connection
    raise err
  File "/usr/local/lib/python3.7/socket.py", line 716, in create_connection
    sock.connect(sa)
OSError: [Errno 99] Cannot assign requested address

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1912, in handle_failure
    self.email_alert(error, task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 2317, in email_alert
    send_email(task.email, subject, html_content_err)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 72, in send_email
    **kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 120, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 231, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 265, in _get_smtp_connection
    else smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 251, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/local/lib/python3.7/smtplib.py", line 336, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 307, in _get_socket
    self.source_address)
  File "/usr/local/lib/python3.7/socket.py", line 728, in create_connection
    raise err
  File "/usr/local/lib/python3.7/socket.py", line 716, in create_connection
    sock.connect(sa)
OSError: [Errno 99] Cannot assign requested address
[2022-11-30T15:01:15.024+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 22 for task clean_bucket (syntax error at or near "{"
LINE 3:                    values {{ deleted_files }}
                                  ^
; 3693)
[2022-11-30T15:01:15.048+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-30T15:01:15.064+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
